# maniac

./: .gitignore  Cargo.toml  README.md
src/: bubble_sorter.rs  cocktail_shaker_sorter.rs  comb_sorter.rs  gnome_sorter.rs  insertion_sorter.rs  lib.rs  odd_even_sorter.rs  standard_sorter.rs  template  test_macros.rs
